sw: fix string accesses in SwScanner::NextWord() (related: tdf#109081)

getWordBoundary() can return bounds that do not include the starting
nPos, if there are ZWSP characters at the starting position.

This happens in the bugdoc of tdf#109081 where paragraph starts with 3
ZWSP and then 5 dashes, SwScanner is created from 0 to 1 and bounds are
3 to 8.

Change-Id: I5fc41b98568a7211fc7d5f29bb87840371a4c005
(cherry picked from commit af78fa5f0d3d891b9a30e927a3b35c55f03a03a7)
Reviewed-on: https://gerrit.libreoffice.org/40502
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>